--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "formik": "^2.4.5",
     "i": "^0.3.7",
     "npm": "^10.5.0",
     "react": "^18.2.0",
