--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
     "sass": "^1.72.0",
     "yup": "^1.4.0"
   },
